applications/bookinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
  labels:
    argocd.argoproj.io/managed-by: openshift-operators
