applications/bookinfo/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: productpage
    service: productpage
  name: productpage
  namespace: bookinfo
spec:
  host: productpage-bookinfo.apps.rh-ocp-01.cool.lab
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: productpage
    weight: 100
  wildcardPolicy: None
