applications/bookinfo/virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: bookinfo
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: reviews
spec:
  hosts:
  - 'reviews'
  http:
  - route:
    timeout: 0.5s
    - destination:
        host: reviews
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: ratings
spec:
  hosts:
  - 'ratings'
  http:
  - match:
    - headers:
        end-user:
          exact: Eero
    route:
    - destination:
        host: ratings
        port:
          number: 9080
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 2s
  - route:
    - destination:
        host: ratings
        port:
          number: 9080
